# udx

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
docs/: api.md  architecture.md  format.md
src/: udx_btree.c  udx_chunk.c  udx_chunk.h  udx_reader.h  udx_types.h  udx_writer.c  udx_writer.h
tests/: CMakeLists.txt  test_chunk.c  test_fixture.c  test_main.c  test_reader.c  test_utils.c  test_words.c  test_writer.c
udx.xcodeproj/: project.pbxproj
udx.xcodeproj/xcshareddata/xcschemes/: udx.xcscheme  udx_tests.xcscheme
udx.xcodeproj/xcuserdata/kejinlu.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
udx.xcodeproj/xcuserdata/kejinlu.xcuserdatad/xcschemes/: xcschememanagement.plist
udxtest/: main.c
